Finally getting there with User/Department composite view. Needs some css love.

--- a/public/scripts/templates/tmpl.user.department.header.html
+++ b/public/scripts/templates/tmpl.user.department.header.html
@@ -1,8 +1,9 @@
-<script type="text/x-knockback-template" id="tmpl-user-department-header">
+<script type="text/x-handlebars-template" id="tmpl-user-department-header">
   
-  <span style="clear: both; width:300px; font-weight: bold; display: block; " data-bind="text: name"></span> 
+  <span class="alert alert-info span6" style="clear: both; display: block; " >{{name}}</span> 
   
-  <div id="users">
-  </div>
+  <div id="users"></div>
 
 </script>
+
+ 
