Removed Knockback and re-added ModelBinder

--- a/public/scripts/templates/tmpl.user.department.header.html
+++ b/public/scripts/templates/tmpl.user.department.header.html
@@ -1,6 +1,6 @@
 <script type="text/x-handlebars-template" id="tmpl-user-department-header">
   
-  <span class="alert alert-info span6" style="clear: both; display: block; " >{{name}}</span> 
+  <span class="alert alert-info" style="clear: both; display: block; " >{{name}}</span> 
   
   <div id="users"></div>
 
