--- a/public/scripts/templates/tmpl.user.maintenance.html
+++ b/public/scripts/templates/tmpl.user.maintenance.html
@@ -32,7 +32,7 @@
 				<div class="control-group">			
 					<label class="control-label" for="departmentId">Department:</label>
 					<div class="controls">
-						<select id="departmentId" name="departmentId" data-placeholder="Please select a department">
+						<select id="departmentId" name="departmentId" >
 							{{#each departments.models}}
 							 <option value="{{this.attributes._id}}">{{this.attributes.name}}</option>
 							{{/each}}
