Moved back to Mongoose. Renamed user to employee

--- a/public/scripts/templates/tmpl.admin.navigation.html
+++ b/public/scripts/templates/tmpl.admin.navigation.html
@@ -4,7 +4,7 @@
       Administration
     </li>
     <li>
-      <a href="#admin/users"><i class="icon-user"></i>Users</a>
+      <a href="#admin/Employees"><i class="icon-user"></i>Users</a>
     </li>
     <li>
       <a href="#admin/departments"><i class="icon-book"></i>Departments</a>
