--- a/public/scripts/templates/tmpl.employee.item.html
+++ b/public/scripts/templates/tmpl.employee.item.html
@@ -1,9 +1,9 @@
 
-<script type="text/x-handlebars-template" id="tmpl-user-item">
+<script type="text/x-handlebars-template" id="tmpl-Employee-item">
 
-  <div class="user-container">
+  <div class="Employee-container">
 
-    <button class="btn-remove-user" ><i class="icon-remove"/></button>  
+    <button class="btn-remove-Employee" ><i class="icon-remove"/></button>  
 
     <img class="edit img-polaroid" style="margin-left: 35px;  cursor: pointer; width:100px; height:100px;" src = "{{gravatar}}", title = "{{fullname}}" />
     
