--- a/public/scripts/templates/tmpl.employee.maintenance.html
+++ b/public/scripts/templates/tmpl.employee.maintenance.html
@@ -1,10 +1,10 @@
-<script type="text/x-handlebars-template" id="tmpl-user-maintenance">
+<script type="text/x-handlebars-template" id="tmpl-Employee-maintenance">
 	<div class="span8">
-		<form id="user-maintenance" class="form-horizontal">
+		<form id="Employee-maintenance" class="form-horizontal">
 			<fieldset>
 
 				<div class="control-group">	
-					<img style="margin-bottom: -30px;" class="pull-right" src="/images/blank-gravatar.jpg" id="user-gravatar" alt="users gravatar">
+					<img style="margin-bottom: -30px;" class="pull-right" src="/images/blank-gravatar.jpg" id="Employee-gravatar" alt="Employees gravatar">
 					<legend>User</legend>
 				</div>	
 
