--- a/public/scripts/templates/tmpl.department.navigation.html
+++ b/public/scripts/templates/tmpl.department.navigation.html
@@ -1,5 +1,5 @@
 <script type="text/x-handlebars-template" id="tmpl-department-navigation">
   <div class="alert alert-info span4" style="margin-bottom: 60px;">
-    Add a new department to the system <button id="create" type="button" class="btn btn-primary"><i class="icon-user"></i> Create »</button>  
+    Add a new department to the system <button id="create" type="button" class="btn btn-primary"><i class="icon-Employee"></i> Create »</button>  
   </div>
 </script>
