--- a/public/scripts/templates/tmpl.employee.department.header.html
+++ b/public/scripts/templates/tmpl.employee.department.header.html
@@ -1,8 +1,8 @@
-<script type="text/x-handlebars-template" id="tmpl-Employee-department-header">
+<script type="text/x-handlebars-template" id="tmpl-employee-department-header">
   
   <span class="alert alert-info" style="clear: both; display: block; " >{{name}}</span> 
   
-  <div id="Employees"></div>
+  <div id="employees"></div>
 
 </script>
 
