--- a/public/scripts/templates/tmpl.employee.list.empty.html
+++ b/public/scripts/templates/tmpl.employee.list.empty.html
@@ -1,5 +1,5 @@
-<script type="text/x-handlebars-template" id="tmpl-Employee-list-empty">
+<script type="text/x-handlebars-template" id="tmpl-employee-list-empty">
       
-      <span>There are currently no Employees in this department</span>  
+      <span>There are currently no employees in this department</span>  
 
 </script>
