--- a/public/scripts/templates/tmpl.employees.layout.html
+++ b/public/scripts/templates/tmpl.employees.layout.html
@@ -1,6 +1,6 @@
-<script type="text/x-handlebars-template" id="tmpl-Employees-layout">
+<script type="text/x-handlebars-template" id="tmpl-employees-layout">
 	<div>
-		<div id="Employee-navigation-region"></div>
-		<div id="Employee-list-region"></div>
+		<div id="employee-navigation-region"></div>
+		<div id="employee-list-region"></div>
 	</div>	
 </script>
