--- a/public/scripts/templates/tmpl.employee.navigation.html
+++ b/public/scripts/templates/tmpl.employee.navigation.html
@@ -1,5 +1,5 @@
-<script type="text/x-handlebars-template" id="tmpl-Employee-navigation">
+<script type="text/x-handlebars-template" id="tmpl-employee-navigation">
 	<div class="alert alert-info span3" style="margin-bottom: 60px;">
-		Add a new Employee to the system <button id="create" type="button" class="btn btn-primary"><i class="icon-Employee"></i> Create »</button>  
+		Add a new employee to the system <button id="create" type="button" class="btn btn-primary"><i class="icon-user"></i> Create »</button>  
 	</div>
 </script>
