--- a/public/scripts/templates/tmpl.employee.department.header.html
+++ b/public/scripts/templates/tmpl.employee.department.header.html
@@ -1,8 +1,11 @@
 <script type="text/x-handlebars-template" id="tmpl-employee-department-header">
   
-  <span class="alert alert-info" style="clear: both; display: block; " >{{name}}</span> 
+  <div class="department-header alert alert-info" style="clear: both; " >
+    {{name}}
+    <button id="create-employee" type="button" class="btn-create-employee btn btn-primary" ><i class="icon-user"></i> Add employee »</button> 
+  </div> 
   
-  <div id="employees"></div>
+  <div id="employees" ></div>
 
 </script>
 
