Attempting to add twitter bootstrap modal for employee removal

--- a/public/scripts/templates/tmpl.employee.item.html
+++ b/public/scripts/templates/tmpl.employee.item.html
@@ -3,7 +3,7 @@
 
   <div class="employee-container">
 
-    <button class="btn-remove-employee" ><i class="icon-remove"/></button>  
+    <button class="btn-remove-employee" type="button" ><i class="icon-remove"/></button>  
 
     <img class="edit img-polaroid" style="margin-left: 35px;  cursor: pointer; width:100px; height:100px;" src = "{{gravatar}}", title = "{{fullname}}" />
     
