Finally got the employee remove/delete working

--- a/public/scripts/templates/tmpl.employee.remove.modal.html
+++ b/public/scripts/templates/tmpl.employee.remove.modal.html
@@ -1,5 +1,7 @@
 <script type="text/x-handlebars-template" id="tmpl-employee-remove-modal">
 
+  <p>This is the employee removal view</p>
+
   <div class="modal hide slide fade" id="removeModal" tabindex="-1" role="dialog" aria-labelledby="removeModalLabel" aria-hidden="true" >
     <div class="modal-header">
       <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
