--- a/public/scripts/templates/tmpl.employees.layout.html
+++ b/public/scripts/templates/tmpl.employees.layout.html
@@ -2,5 +2,6 @@
 	<div>
 		<div id="employee-navigation-region"></div>
 		<div id="employee-list-region"></div>
+    <div id="employee-remove-region"></div> 
 	</div>	
 </script>
