--- a/public/scripts/templates/tmpl.employee.item.html
+++ b/public/scripts/templates/tmpl.employee.item.html
@@ -5,7 +5,7 @@
 
     <button class="btn-remove-employee" type="button" ><i class="icon-remove"/></button>  
 
-    <img class="edit img-polaroid" style="margin-left: 35px;  cursor: pointer; width:100px; height:100px;" src = "{{gravatar}}", title = "{{fullname}}" />
+    <img class="edit img-polaroid employee-image" src = "{{gravatar}}", title = "{{fullname}}" />
     
     <span style="font-weight: bold; display: block; text-align: center; margin-left: auto; margin-right: auto; width: 150px;">{{fullname}}</span> 
 
