--- a/public/scripts/app.css
+++ b/public/scripts/app.css
@@ -32,6 +32,10 @@
   height:105px;
 }
 
+.department-header {
+  background-color: #E3E3E3
+}
+
 .employee-container:hover .btn-remove-employee { visibility: visible; }
 .department-header:hover .btn-create-employee { visibility: visible; }
 
